{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 40,
  "lineage": "5885f30f-964a-0151-2008-59c7c957c31b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246604690047:internet-gateway/igw-0177cf9eff8c8d287",
            "id": "igw-0177cf9eff8c8d287",
            "owner_id": "246604690047",
            "tags": {
              "Name": "test_gateway_tag"
            },
            "tags_all": {
              "Name": "test_gateway_tag"
            },
            "vpc_id": "vpc-06ed089ff17ec6fb3"
          },
          "dependencies": [
            "aws_vpc.vpc_test1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246604690047:route-table/rtb-04d0af2efaf19c410",
            "id": "rtb-04d0af2efaf19c410",
            "owner_id": "246604690047",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0177cf9eff8c8d287",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IGT"
            },
            "tags_all": {
              "Name": "IGT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ed089ff17ec6fb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_gateway",
            "aws_vpc.vpc_test1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0f34ee2118fffa7",
            "route_table_id": "rtb-04d0af2efaf19c410",
            "subnet_id": "subnet-053ffa237f1143111"
          },
          "dependencies": [
            "aws_internet_gateway.test_gateway",
            "aws_route_table.Public_route1",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_test1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Office-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246604690047:security-group/sg-041dea8363e50069c",
            "description": "Security Group for testing",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound Sec Permission",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041dea8363e50069c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound Sec Permission",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound Sec Permission",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound Sec Permission",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security group",
            "name_prefix": "",
            "owner_id": "246604690047",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ed089ff17ec6fb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_test1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246604690047:subnet/subnet-053ffa237f1143111",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053ffa237f1143111",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "246604690047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC_test1_subnet"
            },
            "tags_all": {
              "Name": "VPC_test1_subnet"
            },
            "vpc_id": "vpc-06ed089ff17ec6fb3"
          },
          "dependencies": [
            "aws_vpc.vpc_test1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_test1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246604690047:vpc/vpc-06ed089ff17ec6fb3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d4ed917b96862a4",
            "default_route_table_id": "rtb-0f1a1aed8f0f50e32",
            "default_security_group_id": "sg-0901c6234e53b8f35",
            "dhcp_options_id": "dopt-0fc6caced3ababf16",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ed089ff17ec6fb3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1a1aed8f0f50e32",
            "owner_id": "246604690047",
            "tags": {
              "Name": "vpc_test1"
            },
            "tags_all": {
              "Name": "vpc_test1"
            }
          }
        }
      ]
    }
  ]
}